Optimization unparsing of literals Better handling of runtime errors