@@ -16,7 +16,6 @@
  */
 package org.apache.hop.expression.operator;
 
-import org.apache.hop.expression.ExpressionError;
 import org.apache.hop.expression.ExpressionException;
 import org.apache.hop.expression.Function;
 import org.apache.hop.expression.FunctionPlugin;
@@ -46,11 +45,6 @@ public class UrlEncodeFunction extends Function {
     Object value = operands[0].getValue(context);
     if (value == null)
       return null;
-    try {
-      return URLEncoder.encode(Coerse.toString(value), StandardCharsets.UTF_8.name());
-    } catch (Exception e) {
-      throw new ExpressionException(ExpressionError.URLENCODE_ERROR, value, e.getMessage());
-    }
+    return URLEncoder.encode(Coerse.toString(value), StandardCharsets.UTF_8);
   }
-
 }
